fix(settings): Style updates - fix text being too low on the review button - force reset button to use normal button style

--- a/src/styles/settings.css
+++ b/src/styles/settings.css
@@ -613,10 +613,9 @@ section .field--showDetails .subsettings-details {
   background: white;
   color: black;
   margin-left: 12px;
-  padding: 10px 36px;
+  padding: 0 36px;
   border: 0;
   border-radius: 24px;
-  line-height: 24px;
   text-decoration: none;
   cursor: pointer;
   font-weight: 500;
